--- a/Projekt Views/index.html
+++ b/Projekt Views/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link href="css/responsive.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="container">
 <div id="head">
 <ul>
-<li><a href="geraete/datenbank.xml">Geräteliste</a></li>
-<li><a href="#">Herstellerliste</a></li>
-<li><a href="#">Kundeliste</a></li>
-<li><a href="#">PLZ fehlt</a></li>
-<li><a href="#">Kundeliste</a></li>
-<li><a href="#">Recyclinghof exakt</a></li>
+<li><a href="index.html">Startseite</a></li>
+<li><a href="geraeteliste/datenbank.xml">Geräteliste</a></li>
+<li><a href="herstellerliste/datenbank.xml">Herstellerliste</a></li>
+<li><a href="kundenliste/datenbank.xml">Kundeliste</a></li>
+<li><a href="plzfehlt/datenbank.xml">PLZ fehlt</a></li>
+<li><a href="recyclinhofexakt/datenbank.xml">Recyclinghof exakt</a></li>
 <li><a href="#">Recyclinhof in der Nähe</a></li>
 </ul>
 </div>
