--- a/Projekt Views/index.html
+++ b/Projekt Views/index.html
@@ -13,8 +13,8 @@
 <li><a href="herstellerliste/datenbank.xml">Herstellerliste</a></li>
 <li><a href="kundenliste/datenbank.xml">Kundeliste</a></li>
 <li><a href="plzfehlt/datenbank.xml">PLZ fehlt</a></li>
-<li><a href="recyclinhofexakt/datenbank.xml">Recyclinghof exakt</a></li>
-<li><a href="#">Recyclinhof in der Nähe</a></li>
+<li><a href="recyclinghofexakt/datenbank.xml">Recyclinghof exakt</a></li>
+<li><a href="recyclinghofnahe/datenbank.xml">Recyclinhof in der Nähe</a></li>
 </ul>
 </div>
 <div id="content">
