--- a/Doku/XML Linking Language (XLink) Version 1.1.html
+++ b/Doku/XML Linking Language (XLink) Version 1.1.html
@@ -1331,7 +1331,7 @@ div count(bestandteile/bestandteil), '###,###,##0.00')"/&gt; %&lt;/strong&gt;
 </pre></div>
 <h4>8.6.3 Screenshot</h4>
 <figure> 
-    <img src="img/reycling-einfach.png" alt="PLZ fehlt" name="plzexakt" id="plzexakt"/>
+    <img src="img/recycling-einfach.png" alt="PLZ fehlt" name="plzexakt" id="plzexakt"/>
     <figcaption><span>Abbildung 15: <abbr title="KundeRecyclinghof">Einfache Ausgabe des passenden Recyclinghofs</abbr></span></figcaption>
 </figure>
 
