--- a/Doku/XML Linking Language (XLink) Version 1.1.html
+++ b/Doku/XML Linking Language (XLink) Version 1.1.html
@@ -113,8 +113,11 @@ div.exampleHeader { font-weight: bold;
 <dt>Previous versions:</dt>
 <dd><a href="http://www.w3.org/TR/2010/PR-xlink11-20100225/">http://www.w3.org/TR/2010/PR-xlink11-20100225/</a> <a href="http://www.w3.org/TR/2008/WD-xlink11-20080331/">http://www.w3.org/TR/2008/WD-xlink11-20080331/</a></dd>
 <dt>Editors:</dt>
+<div style="height:60px;"></div>
 <dd>Jennifer Steinbinder, 2262360</dd>
+<div style="height:60px;"></div>
 <dd>Tobias Linke, 2432648</dd>
+<div style="height:60px;"></div>
 <dd>Josef Eiter, 2318404</dd>
 </dl>
 <p>Please refer to the <a href="http://www.w3.org/XML/2010/xlink-11-errata.html"><strong>errata</strong></a> for this document, which may include normative corrections.</p>
